# Phenobot_Camera_ROS2_Package

./: README.md
phenobot_camera/: CMakeLists.txt  note.md  package.xml
phenobot_camera/launch/: old_start_camera.launch  pr2_wg_world.launch  start_camera.py
phenobot_camera/scripts/: connect_camera.py  stop_trigger_camera.py  test_rclpy.py  trigger_camera.py
phenobot_camera/src/: flirBFS (copy).cpp  flirBFS.cpp  flirBFS.h  main (copy).cpp  main.cpp  paramListener.cpp  paramListener.h  singleCamera.h
phenobot_camera/src/backup/: flirBFS.cpp  flirBFS.h  paramListener.cpp  paramListener.h  sensorClient.cpp  singleCamera.h
